--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="shortcut icon" href="resource/ico.ico">
 	</head>
 	<body class="is-preload">
 
@@ -53,14 +54,14 @@
 							<article id="work">
 								<h2 class="major">赞助</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p><a href="https://afdian.net/a/CakeCloudserver" target="_blank">点我前往！</a>:</p>
+								<p><a href="https://afdian.net/a/CakeCloudserver" target="_blank">点我前往！</a></p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">下载</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p> <a href="https://cowtransfer.com/s/9c1723e6bb5444">点我下载客户端！<a>传输口令：1d76ej，受Github上传限制，无法直接下载。</p>
+								<p> <a href="https://cowtransfer.com/s/9c1723e6bb5444">点我下载客户端！<a> 传输口令：1d76ej，受Github上传限制，无法直接下载。</p>
 							</article>
 
 						<!-- Contact -->
@@ -69,12 +70,6 @@
 								<form method="post" action="#">
 									<p> <a href="https://play.mcmod.cn/sv20186183.html">跳转到MC百科找服玩宣传页面<a/><p>
 								</form>
-								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
 							</article>
 
 						<!-- Elements -->
