--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">关于</h2>
-								<p>这只是一个不出名的MC服务器。</p>
+								<p>服务器IP：<br/>1.cn-ha-bgp-1.openfrp.top:12345（主服节点，使用1.16.5以上版本）<br/>2.cn-hblt-plc-1.openfrp.top:56666（主服节点，使用1.16.5以上版本）<br/>3.us-los-bgp-8.openfrp.top:60000（主服节点，使用1.16.5以上版本，建议外网使用）<br/>4.cn-ha-bgp-1.openfrp.top:12378（科技服节点）<br/>5.cn-sy-dx-1.natfrp.cloud:30398（旧节点，念旧专用）<br/>6.cn-nn-dx-1.natfrp.cloud:60888（旧节点，念旧专用）<br/>子服列表：1.科技生存（使用客户端）<br/>2.我们的地铁梦（使用客户端，错误，无法使用）<br/>3.原版生存（须使用1.19进入）<br/>4.大厅（须使用1.16.5以上进入）。</p>
 							</article>
 
 						<!-- Work -->
