--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 		<title>CakeCloud</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="https://zjserver.top/assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="https://zjserver.top/assets/css/noscript.css" /></noscript>
-		<link rel="shortcut icon" href="https://zjserver.top/resource/ico.ico">
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="shortcut icon" href="resource/ico.ico">
 	</head>
 	<body class="is-preload">
 
@@ -324,11 +324,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<div id="bg"></div>
 
 		<!-- Scripts -->
-			<script src="https://zjserver.top/assets/js/jquery.min.js"></script>
-			<script src="https://zjserver.top/assets/js/browser.min.js"></script>
-			<script src="https://zjserver.top/assets/js/breakpoints.min.js"></script>
-			<script src="https://zjserver.top/assets/js/util.js"></script>
-			<script src="https://zjserver.top/assets/js/main.js"></script>
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
