--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design by: <a href="https://html5up.net">HTML5 UP</a>.©Copyright <a href="https://www.zjserver.top">CakeCloud</a> 2021-2022.CDN加速服务 by <a href="https://www.cloudflare.com/">Cloudflare</a>.</p>
+						<p class="copyright">&copy; Untitled. Design by: <a href="https://html5up.net">HTML5 UP</a>.Copyright © 2020-2022.<a href="https://www.zjserver.top">Cake Cloud<a> All rights reserved.CDN加速服务 by <a href="https://www.cloudflare.com/">Cloudflare</a>.</p>
 					</footer>
 
 			</div>
