--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">下载</h2>
-								<p> <a href="https://cowtransfer.com/s/9c1723e6bb5444">点我下载客户端！<a> 传输口令：1d76ej，受Github上传限制，无法直接下载。</p>
+								<p> <a href="https://cowtransfer.com/s/9c1723e6bb5444">点我下载客户端！</a> 传输口令：1d76ej，受Github上传限制，无法直接下载。</p>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">其他</h2>
 								<form method="post" action="#">
-									<p> <a href="https://play.mcmod.cn/sv20186183.html">跳转到MC百科找服玩宣传页面<a/><p>
+									<p> 跳转到<a href="https://play.mcmod.cn/sv20186183.html">MC百科找服玩</a>宣传页面<p>
 								</form>
 							</article>
 
@@ -315,7 +315,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design by: <a href="https://html5up.net">HTML5 UP</a>.Copyright © 2020-2022.<a href="https://www.zjserver.top">Cake Cloud<a> All rights reserved.CDN加速服务 by <a href="https://www.cloudflare.com/">Cloudflare</a>.</p>
+						<p class="copyright">&copy; Untitled. Design by: <a href="https://html5up.net">HTML5 UP</a>.Copyright © 2020-2022.<a href="https://www.zjserver.top">Cake Cloud</a> All rights reserved.CDN加速服务 by <a href="https://www.cloudflare.com/">Cloudflare</a>.</p>
 					</footer>
 
 			</div>
