--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">下载</h2>
-								<p> <a href="https://cowtransfer.com/s/9c1723e6bb5444">点我下载客户端！</a> 传输口令：1d76ej，受Github上传限制，无法直接下载。</p>
+								<p> <a href="https://github.com/FireTomcat/cakecloud/releases/download/Pubilc1/CakeCloud.exe">点我下载客户端！</a></p>
 							</article>
 
 						<!-- Contact -->
