--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 								<h2 class="major">其他</h2>
 								<form method="post" action="#">
 									<p> 跳转到<a href="https://play.mcmod.cn/sv20186183.html">MC百科找服玩</a>宣传页面<p>
+									<script type="text/javascript" src="php/index.php?id=index"><script>
 								</form>
 							</article>
 
