--- a/index.html
+++ b/index.html
@@ -1,348 +1,50 @@
-<!DOCTYPE HTML>
-<!--
-	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>CakeCloud</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<link rel="shortcut icon" href="resource/ico.ico">
-	</head>
-	<body class="is-preload">
+<!DOCTYPE html>
+<html lang="en"> 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="nofollow"/>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+    <meta name="description" content="Example Description">
+    <meta name="keywords" content="minecraft, server, mc, minecraft server, Example Server">
+    <meta name="author" content="Example.xyz">
+    <link rel="icon" href="assets/logo.ico"> 
 
-				<!-- Header -->
-					<header id="header">
-						<div class="logo">
-							<span class="icon fa-gem"></span>
-						</div>
-						<div class="content">
-							<div class="inner">
-								<h1>CakeCloud服务器</h1>
-								<p>一个简单的小MC服务器</p>
-							</div>
-						</div>
-						<nav>
-							<ul>
-								<li><a href="#intro">关于</a></li>
-								<li><a href="#work">赞助</a></li>
-								<li><a href="#about">下载</a></li>
-								<li><a href="#contact">其他</a></li>
-								<!--<li><a href="#elements">Elements</a></li>-->
-							</ul>
-						</nav>
-					</header>
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.Example.xyz">
+    <meta property="og:title" content="Example Server">
+    <meta property="og:description" content="Example Description">
+    <meta property="og:image" content="https://image">
+    <meta name="theme-color" content=#12345>
 
-				<!-- Main -->
-					<div id="main">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.Example.xyz">
+    <meta property="twitter:title" content="Example Server">
+    <meta property="twitter:description" content="Example Description">
+    <meta property="twitter:image" content="https://image">
 
-						<!-- Intro -->
-							<article id="intro">
-								<h2 class="major">关于</h2>
-								<p>服务器IP：<br/>1.cn-ha-bgp-1.openfrp.top:12345（主服节点，使用1.16.5以上版本）<br/>2.cn-hblt-plc-1.openfrp.top:56666（主服节点，使用1.16.5以上版本）<br/>3.us-los-bgp-8.openfrp.top:60000（主服节点，使用1.16.5以上版本，建议外网使用）<br/>4.cn-ha-bgp-1.openfrp.top:12378（科技服节点）<br/>5.cn-sy-dx-1.natfrp.cloud:30398（旧节点，念旧专用）<br/>6.cn-nn-dx-1.natfrp.cloud:60888（旧节点，念旧专用）<br/>子服列表：1.科技生存（使用客户端）<br/>2.我们的地铁梦（使用客户端，错误，无法使用）<br/>3.原版生存（须使用1.19进入）<br/>4.大厅（须使用1.16.5以上进入）。</p>
-							</article>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="dist/style.css"> 
+    <script src="https://kit.fontawesome.com/5acf4d9e80.js" crossorigin="anonymous"></script>
 
-						<!-- Work -->
-							<article id="work">
-								<h2 class="major">赞助</h2>
-								<p><a href="https://afdian.net/a/CakeCloudserver" target="_blank">点我前往！</a></p>
-							</article>
-
-						<!-- About -->
-							<article id="about">
-								<h2 class="major">下载</h2>
-								<p> <a href="https://github.com/FireTomcat/cakecloud/releases/download/Pubilc1/CakeCloud.exe">点我下载客户端！</a></p>
-							</article>
-
-						<!-- Contact -->
-							<article id="contact">
-								<h2 class="major">其他</h2>
-								<form method="post" action="#">
-									<p> 跳转到<a href="https://play.mcmod.cn/sv20186183.html">MC百科找服玩</a>宣传页面<p>
-									<script type="text/javascript" src="php/index.php?id=index"><script>
-								</form>
-							</article>
-
-						<!-- Elements -->
-							<article id="elements">
-								<h2 class="major">Elements</h2>
-
-								<section>
-									<h3 class="major">Text</h3>
-									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
-									<hr />
-									<h2>Heading Level 2</h2>
-									<h3>Heading Level 3</h3>
-									<h4>Heading Level 4</h4>
-									<h5>Heading Level 5</h5>
-									<h6>Heading Level 6</h6>
-									<hr />
-									<h4>Blockquote</h4>
-									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
-									<h4>Preformatted</h4>
-									<pre><code>i = 0;
-
-while (!deck.isInOrder()) {
-    print 'Iteration ' + i;
-    deck.shuffle();
-    i++;
-}
-
-print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
-								</section>
-
-								<section>
-									<h3 class="major">Lists</h3>
-
-									<h4>Unordered</h4>
-									<ul>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
-
-									<h4>Alternate</h4>
-									<ul class="alt">
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
-
-									<h4>Ordered</h4>
-									<ol>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis viverra.</li>
-										<li>Felis enim feugiat.</li>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis lorem.</li>
-										<li>Felis enim et feugiat.</li>
-									</ol>
-									<h4>Icons</h4>
-									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-									</ul>
-
-									<h4>Actions</h4>
-									<ul class="actions">
-										<li><a href="#" class="button primary">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions stacked">
-										<li><a href="#" class="button primary">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-								</section>
-
-								<section>
-									<h3 class="major">Table</h3>
-									<h4>Default</h4>
-									<div class="table-wrapper">
-										<table>
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Price</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Item One</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Two</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Three</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Four</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Five</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-											</tbody>
-											<tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
-											</tfoot>
-										</table>
-									</div>
-
-									<h4>Alternate</h4>
-									<div class="table-wrapper">
-										<table class="alt">
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Price</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Item One</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Two</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Three</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Four</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Five</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-											</tbody>
-											<tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
-											</tfoot>
-										</table>
-									</div>
-								</section>
-
-								<section>
-									<h3 class="major">Buttons</h3>
-									<ul class="actions">
-										<li><a href="#" class="button primary">Primary</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button">Default</a></li>
-										<li><a href="#" class="button small">Small</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button primary icon solid fa-download">Icon</a></li>
-										<li><a href="#" class="button icon solid fa-download">Icon</a></li>
-									</ul>
-									<ul class="actions">
-										<li><span class="button primary disabled">Disabled</span></li>
-										<li><span class="button disabled">Disabled</span></li>
-									</ul>
-								</section>
-
-								<section>
-									<h3 class="major">Form</h3>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="demo-name">Name</label>
-												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
-											</div>
-											<div class="field half">
-												<label for="demo-email">Email</label>
-												<input type="email" name="demo-email" id="demo-email" value="" placeholder="jane@untitled.tld" />
-											</div>
-											<div class="field">
-												<label for="demo-category">Category</label>
-												<select name="demo-category" id="demo-category">
-													<option value="">-</option>
-													<option value="1">Manufacturing</option>
-													<option value="1">Shipping</option>
-													<option value="1">Administration</option>
-													<option value="1">Human Resources</option>
-												</select>
-											</div>
-											<div class="field half">
-												<input type="radio" id="demo-priority-low" name="demo-priority" checked>
-												<label for="demo-priority-low">Low</label>
-											</div>
-											<div class="field half">
-												<input type="radio" id="demo-priority-high" name="demo-priority">
-												<label for="demo-priority-high">High</label>
-											</div>
-											<div class="field half">
-												<input type="checkbox" id="demo-copy" name="demo-copy">
-												<label for="demo-copy">Email me a copy</label>
-											</div>
-											<div class="field half">
-												<input type="checkbox" id="demo-human" name="demo-human" checked>
-												<label for="demo-human">Not a robot</label>
-											</div>
-											<div class="field">
-												<label for="demo-message">Message</label>
-												<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><input type="submit" value="Send Message" class="primary" /></li>
-											<li><input type="reset" value="Reset" /></li>
-										</ul>
-									</form>
-								</section>
-
-							</article>
-
-					</div>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design by: <a href="https://html5up.net">HTML5 UP</a>.Copyright © 2020-2022.<a href="https://www.zjserver.top">Cake Cloud</a> All rights reserved.CDN加速服务 by <a href="https://www.cloudflare.com/">Cloudflare</a>.</p>
-					</footer>
-
-			</div>
-
-		<!-- BG -->
-			<div id="bg"></div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-		<p style="display:none">
-			<script language="javascript">
-			<!--// ClientTime by.RebirthIsHope
-			jQuery(document).ready(function(){
-			var ClientTime = (new Date().getTime()-Client);
-			if(ClientTime>=1000){var ClientTime = ClientTime / 1000;var timeunit = "s";}else{var timeunit = "ms";}
-			document.getElementById("ServerTime").innerHTML = "响应时间：61.734ms";
-			document.getElementById("ClientTime").innerHTML = "加载时间: "+ ClientTime + timeunit; 
-
-
-			});
-			//-->
-			</script>
-		</p>
-	</body>
+</head>
+<body>
+    <div class="bg"></div>
+    <!--- Particles -->  <div class="animation-wrapper"> <div class="particle particle-1"></div> <div class="particle particle-2"></div> <div class="particle particle-3"></div> <div class="particle particle-4"></div> </div>
+    <div class="center">
+        <div class="animate__animated animate__jackInTheBox">
+            <h1>TemplateServer</h1> <!--- Server Name -->
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p> <!--- Description -->
+            <div class="animate__animated animate__bounceIn animate__delay-1s">
+                <a href="#"><button class="btn1"><i class="fab fa-discord"></i> Discord</button></a>
+                <a href="#"><button class="btn2"><i class="fas fa-shopping-basket"></i> Store</button></a>
+                <a href="#"><button class="btn3"><i class="fas fa-poll"></i> Vote</button></a>
+            </div>
+        </div>
+    </div>
+    <script src="app/js/script.js"></script>
+    <script src="https://kit.fontawesome.com/5acf4d9e80.js" crossorigin="anonymous"></script>
+</body>
 </html>
+<!--- WEBSITE BY: github.com/OLIMINATOR -->
