--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.Example.xyz">
-    <meta property="og:title" content="CakeCloud">
+    <meta property="og:title" content="Example Server">
     <meta property="og:description" content="Example Description">
     <meta property="og:image" content="https://image">
     <meta name="theme-color" content=#12345>
@@ -27,19 +27,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="dist/style.css"> 
     <script src="https://kit.fontawesome.com/5acf4d9e80.js" crossorigin="anonymous"></script>
-
+	<title>Cakecloud</title>
 </head>
 <body>
     <div class="bg"></div>
     <!--- Particles -->  <div class="animation-wrapper"> <div class="particle particle-1"></div> <div class="particle particle-2"></div> <div class="particle particle-3"></div> <div class="particle particle-4"></div> </div>
     <div class="center">
         <div class="animate__animated animate__jackInTheBox">
-            <h1>TemplateServer</h1> <!--- Server Name -->
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p> <!--- Description -->
+            <h1>Cakecloud</h1> <!--- Server Name -->
+            <p>一个简单的MC服务器</p> <!--- Description -->
             <div class="animate__animated animate__bounceIn animate__delay-1s">
-                <a href="#"><button class="btn1"><i class="fab fa-discord"></i> Discord</button></a>
-                <a href="#"><button class="btn2"><i class="fas fa-shopping-basket"></i> Store</button></a>
-                <a href="#"><button class="btn3"><i class="fas fa-poll"></i> Vote</button></a>
+                <a href="https://github.com/FireTomcat/cakecloud/releases/download/Pubilc1/CakeCloud.exe" target="_blank"><button class="btn1"><i class="fab fa-discord"></i>下载</button></a>
+                <a href="https://play.mcmod.cn/sv20186183.html" target="_blank"><button class="btn2"><i class="fas fa-shopping-basket"></i>跳转到找服玩宣传界面</button></a>
+                <a href="https://afdian.net/a/CakeCloudserver" target="_blank"><button class="btn3"><i class="fas fa-poll"></i>赞助</button></a>
             </div>
         </div>
     </div>
