--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="center">
         <div class="animate__animated animate__jackInTheBox">
             <h1>Cakecloud</h1> <!--- Server Name -->
-            <p>一个简单的MC服务器</br>Cakecloud来到地球已经经过了<span id="time"></span></p> <!--- Description -->
+            <p>一个简单的MC服务器</br>Cakecloud来到地球已经经过了<span id="time.js"></span></p> <!--- Description -->
             <div class="animate__animated animate__bounceIn animate__delay-1s">
                 <a href="https://github.com/FireTomcat/cakecloud/releases/download/Pubilc1/CakeCloud.exe" target="_blank"><button class="btn1"><i class="fab fa-discord"></i>下载</button></a>
                 <a href="https://play.mcmod.cn/sv20186183.html" target="_blank"><button class="btn2"><i class="fas fa-shopping-basket"></i>跳转到找服玩宣传界面</button></a>
