--- a/index.html
+++ b/index.html
@@ -28,42 +28,41 @@
     <link rel="stylesheet" href="dist/style.css"> 
     <script src="https://kit.fontawesome.com/5acf4d9e80.js" crossorigin="anonymous"></script>
 	<title>Cakecloud</title>
-	<script type="text/javascript">
-		
-		function time() {
-    			window.setTimeout("time()", 1000);
-    			var seconds = 1000
-    			var minutes = seconds * 60
-    			var hours = minutes * 60
-    			var days = hours * 24
-    			var years = days * 365
-    			var today = new Date()
-    			var todayYear = today.getFullYear()
-    			var todayMonth = today.getMonth() + 1
-    			var todayDate = today.getDate()
-    			var todayHour = today.getHours()
-    			var todayMinute = today.getMinutes()
-    			var todaySecond = today.getSeconds()
-    			var t1 = Date.UTC(2018, 4, 18, 00, 00, 00)
-    			var t2 = Date.UTC(todayYear, todayMonth, todayDate, todayHour, todayMinute, todaySecond)
-    			var diff = t2 - t1
-    			var diffYears = Math.floor(diff / years)
-    			var diffDays = Math.floor((diff / days) - diffYears * 365)
-    			var diffHours = Math.floor((diff - (diffYears * 365 + diffDays) * days) / hours)
-    			var diffMinutes = Math.floor((diff - (diffYears * 365 + diffDays) * days - diffHours * hours) / minutes)
-    			var diffSeconds = Math.floor((diff - (diffYears * 365 + diffDays) * days - diffHours * hours - diffMinutes * minutes) / seconds)
-    			document.getElementById("time").innerHTML = diffYears + "年" + diffDays + "天" + diffHours + "小时" + diffMinutes + "分钟" + diffSeconds + "秒啦"
-		}
-		time()
+	
 	</script>
 </head>
 <body>
+	<script>function time() {
+						window.setTimeout("time()", 1000);
+						var seconds = 1000
+						var minutes = seconds * 60
+						var hours = minutes * 60
+						var days = hours * 24
+						var years = days * 365
+						var today = new Date()
+						var todayYear = today.getFullYear()
+						var todayMonth = today.getMonth() + 1
+						var todayDate = today.getDate()
+						var todayHour = today.getHours()
+						var todayMinute = today.getMinutes()
+						var todaySecond = today.getSeconds()
+						var t1 = Date.UTC(2018, 4, 18, 00, 00, 00)
+						var t2 = Date.UTC(todayYear, todayMonth, todayDate, todayHour, todayMinute, todaySecond)
+						var diff = t2 - t1
+						var diffYears = Math.floor(diff / years)
+						var diffDays = Math.floor((diff / days) - diffYears * 365)
+						var diffHours = Math.floor((diff - (diffYears * 365 + diffDays) * days) / hours)
+						var diffMinutes = Math.floor((diff - (diffYears * 365 + diffDays) * days - diffHours * hours) / minutes)
+						var diffSeconds = Math.floor((diff - (diffYears * 365 + diffDays) * days - diffHours * hours - diffMinutes *minutes) / seconds)
+						document.getElementById("time").innerHTML = diffYears + "年" + diffDays + "天" + diffHours + "小时" + diffMinutes + "分钟" + diffSeconds + "秒啦"
+					}
+	time()
     <div class="bg"></div>
     <!--- Particles -->  <div class="animation-wrapper"> <div class="particle particle-1"></div> <div class="particle particle-2"></div> <div class="particle particle-3"></div> <div class="particle particle-4"></div> </div>
     <div class="center">
         <div class="animate__animated animate__jackInTheBox">
             <h1>Cakecloud</h1> <!--- Server Name -->
-            <p>一个简单的MC服务器</br>Cakecloud来到地球已经经过了<span id="time.js"></span></p> <!--- Description -->
+            <p>一个简单的MC服务器</br>Cakecloud来到地球已经经过了<span id="time"></span></p> <!--- Description -->
             <div class="animate__animated animate__bounceIn animate__delay-1s">
                 <a href="https://github.com/FireTomcat/cakecloud/releases/download/Pubilc1/CakeCloud.exe" target="_blank"><button class="btn1"><i class="fab fa-discord"></i>下载</button></a>
                 <a href="https://play.mcmod.cn/sv20186183.html" target="_blank"><button class="btn2"><i class="fas fa-shopping-basket"></i>跳转到找服玩宣传界面</button></a>
