--- a/index.html
+++ b/index.html
@@ -32,31 +32,33 @@
 	</script>
 </head>
 <body>
-	<script>function time() {
-						window.setTimeout("time()", 1000);
-						var seconds = 1000
-						var minutes = seconds * 60
-						var hours = minutes * 60
-						var days = hours * 24
-						var years = days * 365
-						var today = new Date()
-						var todayYear = today.getFullYear()
-						var todayMonth = today.getMonth() + 1
-						var todayDate = today.getDate()
-						var todayHour = today.getHours()
-						var todayMinute = today.getMinutes()
-						var todaySecond = today.getSeconds()
-						var t1 = Date.UTC(2020, 6, 18, 00, 00, 00)
-						var t2 = Date.UTC(todayYear, todayMonth, todayDate, todayHour, todayMinute, todaySecond)
-						var diff = t2 - t1
-						var diffYears = Math.floor(diff / years)
-						var diffDays = Math.floor((diff / days) - diffYears * 365)
-						var diffHours = Math.floor((diff - (diffYears * 365 + diffDays) * days) / hours)
-						var diffMinutes = Math.floor((diff - (diffYears * 365 + diffDays) * days - diffHours * hours) / minutes)
-						var diffSeconds = Math.floor((diff - (diffYears * 365 + diffDays) * days - diffHours * hours - diffMinutes *minutes) / seconds)
-						document.getElementById("time").innerHTML = diffYears + "年" + diffDays + "天" + diffHours + "小时" + diffMinutes + "分钟" + diffSeconds + "秒啦"
-					}
+	<script>
+	function time(){
+		window.setTimeout("time()", 1000);
+		var seconds = 1000
+		var minutes = seconds * 60
+		var hours = minutes * 60
+		var days = hours * 24
+		var years = days * 365
+		var today = new Date()
+		var todayYear = today.getFullYear()
+		var todayMonth = today.getMonth() + 1
+		var todayDate = today.getDate()
+		var todayHour = today.getHours()
+		var todayMinute = today.getMinutes()
+		var todaySecond = today.getSeconds()
+		var t1 = Date.UTC(2020, 6, 18, 00, 00, 00)
+		var t2 = Date.UTC(todayYear, todayMonth, todayDate, todayHour, todayMinute, todaySecond)
+		var diff = t2 - t1
+		var diffYears = Math.floor(diff / years)
+		var diffDays = Math.floor((diff / days) - diffYears * 365)
+		var diffHours = Math.floor((diff - (diffYears * 365 + diffDays) * days) / hours)
+		var diffMinutes = Math.floor((diff - (diffYears * 365 + diffDays) * days - diffHours * hours) / minutes)
+		var diffSeconds = Math.floor((diff - (diffYears * 365 + diffDays) * days - diffHours * hours - diffMinutes *minutes) / seconds)
+		document.getElementById("time").innerHTML = diffYears + "年" + diffDays + "天" + diffHours + "小时" + diffMinutes + "分钟" + diffSeconds + "秒啦"
+	}
 	time()
+	</script>
     <div class="bg"></div>
     <!--- Particles -->  <div class="animation-wrapper"> <div class="particle particle-1"></div> <div class="particle particle-2"></div> <div class="particle particle-3"></div> <div class="particle particle-4"></div> </div>
     <div class="center">
