--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		var diffHours = Math.floor((diff - (diffYears * 365 + diffDays) * days) / hours)
 		var diffMinutes = Math.floor((diff - (diffYears * 365 + diffDays) * days - diffHours * hours) / minutes)
 		var diffSeconds = Math.floor((diff - (diffYears * 365 + diffDays) * days - diffHours * hours - diffMinutes *minutes) / seconds)
-		document.getElementById("time").innerHTML = diffYears + "年" + diffDays + "天" + diffHours + "小时" + diffMinutes + "分钟" + diffSeconds + "秒啦"
+		document.getElementById("time").innerHTML = diffYears + "年" + diffDays + "天" + diffHours + "小时" + diffMinutes + "分钟" + diffSeconds + "秒(～￣▽￣)～"
 	}
 	time()
 	</script>
@@ -64,11 +64,25 @@
     <div class="center">
         <div class="animate__animated animate__jackInTheBox">
             <h1>Cakecloud</h1> <!--- Server Name -->
-            <p>一个简单的MC服务器</br>Cakecloud来到地球已经经过了<span id="time"></span></p> <!--- Description -->
+            <p>一个简单的MC服务器</br>Cakecloud来到地球已经经过了</r><span id="time"></span></p> <!--- Description -->
             <div class="animate__animated animate__bounceIn animate__delay-1s">
                 <a href="https://github.com/FireTomcat/cakecloud/releases/download/Pubilc1/CakeCloud.exe" target="_blank"><button class="btn1"><i class="fab fa-discord"></i>下载</button></a>
                 <a href="https://play.mcmod.cn/sv20186183.html" target="_blank"><button class="btn2"><i class="fas fa-shopping-basket"></i>跳转到找服玩宣传界面</button></a>
                 <a href="https://afdian.net/a/CakeCloudserver" target="_blank"><button class="btn3"><i class="fas fa-poll"></i>赞助</button></a>
+		<p style="display:none">
+			<script language="javascript">
+			<!--// ClientTime by.RebirthIsHope
+			jQuery(document).ready(function(){
+			var ClientTime = (new Date().getTime()-Client);
+			if(ClientTime>=1000){var ClientTime = ClientTime / 1000;var timeunit = "s";}else{var timeunit = "ms";}
+			document.getElementById("ServerTime").innerHTML = "响应时间：73.295ms";
+			document.getElementById("ClientTime").innerHTML = "加载时间: "+ ClientTime + timeunit; 
+
+
+			});
+			//-->
+			</script>
+		</p>
             </div>
         </div>
     </div>
